carry done, внес поправки в метод добавления списка